# galactory

./: .dockerignore  ADOPTERS.md  CHANGELOG.rst  Dockerfile  README.md  galactory.py  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: changelogs.yml  test.yml
changelogs/: changelog.yaml  config.yaml
changelogs/archive/0.1.0/: 0.1.0.yml
changelogs/archive/0.10.0/: 0.10.0.yml  77-access-token-bearer-auth-support.yml
changelogs/archive/0.11.0/: 0.11.0.yml  104-v3-refactor.yml
changelogs/archive/0.11.1/: 114-bugfixes.yml
changelogs/archive/0.11.2/: 123-relative-url-scheme.yml
changelogs/archive/0.2.0/: 0.2.0.yml  3-configurable-server-name.yml
changelogs/archive/0.3.0/: 0.3.0.yml  9-performance-and-retries.yml
changelogs/archive/0.3.1/: 0.3.1.yml  11-container-releases.yml
changelogs/archive/0.4.0/: 0.4.0.yml  12-config.yml
changelogs/archive/0.6.0/: 0.6.0.yml  5-manifest-destiny.yml
changelogs/archive/0.7.0/: 0.7.0.yml
changelogs/archive/0.8.0/: 0.8.0.yml  27-protocol-urls.yml  28-configurable-factory.yml  30-healthchecks.yml  32-headers-brotli.yml
changelogs/archive/0.8.1/: 41-docker-py311.yml  42-upstream-proxy-json.yml
changelogs/archive/0.8.2/: 45-upscheme.yml
changelogs/archive/0.9.0/: 0.9.0.yml
changelogs/fragments/: 0.5.0.yml  0.8.1.yml  0.8.2.yml  104-v3-refactor.yml  108-auth-deprecation-extension.yml  109-upload-format.yml  114-bugfixes.yml  13-cache-control.yml  14-publish-skip-configured-key.yml  19-property-fallback.yml  25-requests-environment.yml  27-protocol-urls.yml  48-proxyfix.yml  58-encode-collection-info  72-fix-url-quoting.yml  77-access-token-bearer-auth-support.yml  88-prereleases.yml
galactory/: __init__.py  __main__.py  constants.py  galactory.py  iter_tar.py  models.py  root.py  upstream.py  utilities.py
galactory/api/: __init__.py
galactory/api/v2/: __init__.py  collection_imports.py  collections.py
galactory/api/v3/: __init__.py  collection_imports.py  collections.py
galactory/download/: __init__.py  download.py
galactory/health/: __init__.py
galactory/health/v1/: __init__.py  health_checks.py
tests/: conftest.py  pyproject.toml  requirements.txt
tests/artifactory/: docker-compose.yml
tests/artifactory/config/: artifactory.config.import.yml
tests/data/collections/briantist.one/v0.1.0/: galaxy.yml
tests/data/collections/briantist.one/v0.2.0/: README.md  galaxy.yml
tests/data/collections/briantist.two/v1.1.0/: galaxy.yml
tests/data/collections/briantist.two/v2.2.0/: galaxy.yml
tests/fixtures/artifactory/responses/: stat_dir.json  stat_file.json
tests/fixtures/artifactory/virtual/subpath/briantist-devel-0.1.0-dev0.tar.gz/: MANIFEST.json
tests/fixtures/artifactory/virtual/subpath/briantist-devel-0.1.0-dev1.tar.gz/: MANIFEST.json
tests/fixtures/artifactory/virtual/subpath/briantist-whatever-0.1.0.tar.gz/: MANIFEST.json
tests/fixtures/artifactory/virtual/subpath/briantist-whatever-0.2.0-dev0.tar.gz/: MANIFEST.json
tests/fixtures/artifactory/virtual/subpath/briantist-whatever-0.2.0.tar.gz/: MANIFEST.json
tests/fixtures/artifactory/virtual/subpath/community-hashi_vault-2.5.0.tar.gz/: MANIFEST.json
tests/integration/: README.md  conftest.py  test_me.py
tests/unit/: conftest.py  test_api.py  test_utilities.py
tests/unit/client/: conftest.py  test_api.py  test_health.py  test_root.py
tests/unit/models/: conftest.py  test_collectioncollection.py  test_collectiondata.py  test_collectiongroup.py
tests/unit/utilities/: conftest.py  test_collected_collections.py  test_discover_collections.py  test_incoming_collection_stream.py  test_utilities.py
(+1 files in other folders)
