[project]
name = "galactory"
version = "0.8.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["changelogs"]

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--cov --cov-report=xml --docker-compose=tests/artifactory/docker-compose.yml --docker-compose-remove-volumes --use-running-containers"
# addopts = "-ra -q"
testpaths = [
    "unit",
    "integration",
]
