[project]
name = "galactory"
version = "0.9.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["changelogs"]

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--cov --cov-report=xml"
# addopts = "--docker-compose=artifactory/docker-compose.yml"
# addopts = "-ra -q"
testpaths = [
    "unit",
    # "integration",
]
