[metadata]
name = galactory
version = 0.2.0
url = https://github.com/briantist/galactory
author = Brian Scholer
license = GPLv3+
license_files = LICENSE
description = Ansible Galaxy proxy using Artifactory as a backend
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    ansible
    galaxy
    artifactory
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    dohq-artifactory>=0.8,<0.9
    Flask>=2.1,<3
    semver>=2,<3
    base64io>=1,<2
